# compressed_enums

./: .create-project.rb  .gitignore  CMakeLists.txt  README.md
.cmake/: ClangOverrides.txt  GccOverrides.txt  IntelOverrides.txt  version.cmake  version.rb
include/: compressed_enums.hxx  consoleColor.h
test/: CMakeLists.txt  basic_structs.cxx  basic_union.cxx  basic_usage.cxx  nested_structs.cxx  storage_conversion.cxx  test1.cxx  test2.cxx  union_visitor.cxx
